--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -15,9 +15,17 @@ a {
   a:hover {
     text-decoration: underline; }
 
+.header-content {
+  position: absolute;
+  right: 0px;
+  width: 50%;
+  top: 36%;
+}
+
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
+  float: left;
   color: rgba(255, 255, 255, 0.7);
   background-color: rgba(255, 255, 255, 0.08);
   border-color: rgba(255, 255, 255, 0.2);
@@ -32,7 +40,63 @@ a {
   color: rgba(255, 255, 255, 0.8);
   text-decoration: none;
   background-color: rgba(255, 255, 255, 0.2);
-  border-color: rgba(255, 255, 255, 0.3); }
+  border-color: rgba(255, 255, 255, 0.3);
+  cursor: pointer; }
+
+.card-group {
+  position: absolute;
+  top: -40%;
+  left: 25%;
+  -ms-transform: rotate(30deg);
+  -webkit-transform: rotate(30deg); /* Chrome, Safari, Opera */
+  transform: rotate(30deg);
+}
+
+.card {
+  width: 200px;
+  height: auto;
+  position: absolute;
+}
+
+.card-1 {
+  left: 0px;
+  top: 120px;
+}
+
+.card-2 {
+  left: 0px;
+  top: 519px;
+}
+
+.card-3 {
+  left: 0px;
+  top: 918px;
+}
+
+.card-4 {
+  left: 231px;
+  top: 0px;
+}
+
+.card-5 {
+  left: 231px;
+  top: 399px;
+}
+
+.card-6 {
+  left: 231px;
+  top: 798px;
+}
+
+.card-7 {
+  left: 462px;
+  top: 688px;
+}
+
+.card-8 {
+  left: -231px;
+  top: 378px;
+}
 
 @media screen and (min-width: 64em) {
   .btn {
@@ -55,9 +119,10 @@ a {
 
 .page-header {
   color: #fff;
+  height: 100vh;
   text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-color: #6BAAFF;
+  background-image: linear-gradient(120deg, #926AF9, #926AF9, #6BAAFF); }
 
 @media screen and (min-width: 64em) {
   .page-header {
@@ -73,7 +138,8 @@ a {
 
 .project-name {
   margin-top: 0;
-  margin-bottom: 0.1rem; }
+  margin-bottom: 0.1rem;
+  text-align: left; }
 
 @media screen and (min-width: 64em) {
   .project-name {
@@ -90,7 +156,8 @@ a {
 .project-tagline {
   margin-bottom: 2rem;
   font-weight: normal;
-  opacity: 0.7; }
+  opacity: 0.7;
+  text-align: left; }
 
 @media screen and (min-width: 64em) {
   .project-tagline {
@@ -205,19 +272,24 @@ a {
 
 @media screen and (min-width: 64em) {
   .main-content {
-    max-width: 64rem;
     padding: 2rem 6rem;
     margin: 0 auto;
+    position: relative;
+    background-color: white;
     font-size: 1.1rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .main-content {
     padding: 2rem 4rem;
+    position: relative;
+    background-color: white;
     font-size: 1.1rem; } }
 
 @media screen and (max-width: 42em) {
   .main-content {
     padding: 2rem 1rem;
+    position: relative;
+    background-color: white;
     font-size: 1rem; } }
 
 .site-footer {
